data/derived/comb/progs/unify/prog1089.ml.out
Characters 216-218:
  let _ = Format.printf "red   = %s \n" (exprToString e1) in
                                                      ^^
Error: This expression has type string but an expression was expected of type
         expr
